corregi un codigo html

--- a/miniblog/templates/new_user.html
+++ b/miniblog/templates/new_user.html
@@ -8,7 +8,7 @@
   <label>Correo
     <input type="email" name="correo" required>
   </label>
-  <label>Contraseña (simple para la EFI)
+  <label>Contraseña
     <input type="password" name="password" required minlength="4">
   </label>
   <button class="btn" type="submit">Crear usuario</button>
